# Formation-CMake

./: CMakeLists.txt  lib.c  main.c
Introduction au kit de développement logiciel Pico SDK/: compilation_steps_uf2.odg  main.tex
Introduction au moteur de production CMake/: Makefile  aux.c  aux.h  aux_fixed.c  compilation_steps.odg  compilation_to_obj.odg  main.S  main.c  main.tex  main_dump.txt  main_for_aux.c  main_for_aux_fixed.c
include/: CMakeLists.txt
src/: CMakeLists.txt  compute.c  print.c
